Implement student management features and UI updates
- Added CRUD methods for managing students in DatabaseManager.cs.
- Updated Dienynas.csproj to ensure Grade.cs is copied to output.
- Enhanced InOutUtils.cs with methods for student operations.
- Revamped MainWindow.xaml with a new menu for student management.
- Added event handlers in MainWindow.xaml.cs for menu actions.
- Introduced a parameterless constructor in Student.cs for flexibility.
- Cleaned up redundant using directives in Student.cs.

--- a/Dienynas/MainWindow.xaml
+++ b/Dienynas/MainWindow.xaml
@@ -7,12 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="167,119,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
-        <Label Content="Studentu skaičuis&#xD;&#xA;&#xD;&#xA;          0" HorizontalAlignment="Left" Height="92" Margin="168,10,0,0" VerticalAlignment="Top" Width="146"/>
-        <Label Content="Moduliu skaičius&#xD;&#xA;&#xD;&#xA;             0" HorizontalAlignment="Center" Height="92" Margin="0,10,0,0" VerticalAlignment="Top" Width="132"/>
-        <Label Content="Label" HorizontalAlignment="Left" Height="160" Margin="10,249,0,0" VerticalAlignment="Top" Width="133"/>
-        <Label Content="Studentu paieška" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="133"/>
-        <Label Content="Prideti nauja studenta" HorizontalAlignment="Left" Height="32" Margin="10,56,0,0" VerticalAlignment="Top" Width="133"/>
-
+        <Menu VerticalAlignment="Top">
+            <MenuItem Header="Student">
+                <MenuItem Header="Pridėti studentą" Click="AddStudent_Click"/>
+                <MenuItem Header="Ištrinti studentą" Click="DeleteStudent_Click"/>
+                <MenuItem Header="Redaguoti studentą" Click="EditStudent_Click"/>
+                <MenuItem Header="Pridėti pažymį" Click="AddGrade_Click"/>
+                <MenuItem Header="Paieška" Click="SearchStudent_Click"/>
+                <MenuItem Header="Rūšiavimas" Click="SortStudent_Click"/>
+            </MenuItem>
+        </Menu>
+        <DataGrid x:Name="StudentDataGrid" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,30,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
     </Grid>
 </Window>
