--- a/Dienynas/MainWindow.xaml
+++ b/Dienynas/MainWindow.xaml
@@ -9,7 +9,9 @@
     <Grid>
         <Menu VerticalAlignment="Top">
             <MenuItem Header="Student">
-                <MenuItem Header="Pridėti studentą" Click="AddStudent_Click"/>
+                <MenuItem Header="Pridėti studentą" Click="AddStudentButton_Click"/>
+                <MenuItem Header="Pridėti modulį" Click="AddModule_Click"/>
+               
                 <MenuItem Header="Ištrinti studentą" Click="DeleteStudent_Click"/>
                 <MenuItem Header="Redaguoti studentą" Click="EditStudent_Click"/>
                 <MenuItem Header="Pridėti pažymį" Click="AddGrade_Click"/>
@@ -17,6 +19,25 @@
                 <MenuItem Header="Rūšiavimas" Click="SortStudent_Click"/>
             </MenuItem>
         </Menu>
-        <DataGrid x:Name="StudentDataGrid" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,30,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
+        <DataGrid  Visibility="Visible" x:Name="StudentDataGrid" d:ItemsSource="{d:SampleData ItemCount=10}" Margin="10,30,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
+
+        <!-- Input fields for adding a new student -->
+        <StackPanel x:Name="AddStudentPanel" Visibility="Hidden" Margin="0,0,0,10">
+            <Label Content="Vardas" RenderTransformOrigin="0.5,2.467" Margin="150,50,150,0"/>
+            <TextBox x:Name="FirstNameTextBox" Text="Vardas" Margin="150,0,150,10" UndoLimit="98"  />
+            <Label Content="Pavardė" RenderTransformOrigin="0.5,2.467" Margin="150,0,150,0" />
+            <TextBox x:Name="LastNameTextBox" Text="Last Name" Margin="150,0,150,10"/>
+            <Button Margin="150,0,150,10" Click="SubmitNewStudent_Click">
+                <Label Content="Label"/>
+            </Button>
+        </StackPanel>
+        
+        <StackPanel x:Name="AddModulePanel" Visibility="Hidden" Margin="0,0,0,10">
+            <Label Content="Modulio pavadinimas" Margin="150,50,150,0"/>
+            <TextBox x:Name="ModuleNameTextBox" Text="Module Name" Margin="150,0,150,10"/>
+            <Button Margin="150,0,150,10" Click="SubmitNewModule_Click">
+                <Label Content="Pridėti modulį"/>
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
