--- a/Dienynas/MainWindow.xaml
+++ b/Dienynas/MainWindow.xaml
@@ -8,18 +8,18 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Menu VerticalAlignment="Top">
-            <MenuItem Header="Student">
+            <MenuItem Header="Studentas">
                 <MenuItem Header="Pridėti studentą" Click="AddStudentButton_Click"/>
                 <MenuItem Header="Pridėti modulį" Click="AddModule_Click"/>
                
                 <MenuItem Header="Ištrinti studentą" Click="DeleteStudent_Click"/>
-                <MenuItem Header="Redaguoti studentą" Click="EditStudent_Click"/>
                 <MenuItem Header="Pridėti pažymį" Click="AddGrade_Click"/>
                 <MenuItem Header="Paieška" Click="SearchStudent_Click"/>
                 <MenuItem Header="Rūšiavimas" Click="SortStudent_Click"/>
             </MenuItem>
         </Menu>
         <DataGrid  Visibility="Visible" x:Name="StudentDataGrid" d:ItemsSource="{d:SampleData ItemCount=10}" Margin="10,30,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
+        <DataGrid  Visibility="Visible" x:Name="StudentGradesDataGrid" AutoGenerateColumns="False" Margin="10,30,10,10" />
 
         <!-- Input fields for adding a new student -->
         <StackPanel x:Name="AddStudentPanel" Visibility="Hidden" Margin="0,0,0,10">
@@ -39,5 +39,15 @@
                 <Label Content="Pridėti modulį"/>
             </Button>
         </StackPanel>
+        <StackPanel x:Name="DeleteStudentFromModulePanel" Visibility="Hidden" Margin="0,0,0,10">
+            <Label Content="Pasirinkite modulį" Margin="150,50,150,0"/>
+            <ComboBox x:Name="DeleteModuleComboBox" Margin="150,0,150,10" />
+            <Label Content="Pasirinkite studentą" Margin="150,0,150,0"/>
+            <ComboBox x:Name="DeleteStudentComboBox" Margin="150,0,150,10" />
+            <Button Margin="150,0,150,10" Click="SubmitDeleteStudentFromModule_Click">
+                <Label Content="Ištrinti studentą iš modulio"/>
+            </Button>
+        </StackPanel>
+        
     </Grid>
 </Window>
