--- a/Dienynas/MainWindow.xaml
+++ b/Dienynas/MainWindow.xaml
@@ -32,7 +32,7 @@
         </Grid.RowDefinitions>
         
         <!-- Modern App Bar with proper menu -->
-        <Border Grid.Row="0" Background="{StaticResource PrimaryColor}" Effect="{StaticResource SmallDropShadowEffect}">
+        <Border Grid.Row="0" Background="#000000" Effect="{StaticResource SmallDropShadowEffect}">
             <DockPanel LastChildFill="True" Margin="16,0">
                 <TextBlock Text="DIENYNAS" Foreground="White" FontSize="20" FontWeight="Bold" 
                            VerticalAlignment="Center" Margin="0,0,40,0"/>
@@ -75,10 +75,10 @@
                                         </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsHighlighted" Value="True">
-                                                <Setter Property="Background" Value="{StaticResource SecondaryColor}"/>
+                                                <Setter Property="Background" Value="#000000"/>
                                             </Trigger>
                                             <Trigger Property="IsSubmenuOpen" Value="True">
-                                                <Setter Property="Background" Value="{StaticResource SecondaryColor}"/>
+                                                <Setter Property="Background" Value="#000000"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -240,7 +240,7 @@
                     </DataGrid.Resources>
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
-                            <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+                            <Setter Property="Background" Value="#000000"/>
                             <Setter Property="Foreground" Value="White"/>
                             <Setter Property="Padding" Value="16,12"/>
                             <Setter Property="FontWeight" Value="SemiBold"/>
